tests/transpiler/x/fs/outer_join.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(35,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (34:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(35,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (34:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(36,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(36,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (35:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(39,1): error FS0010: Unexpected keyword 'else' in if/then/else expression. Expected incomplete structured construct at or before this point or other token.

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(33,1): error FS3106: Unexpected end of input in 'for' expression. Expected 'for <pat> in <expr> do <expr>'.

/workspace/mochi/tests/transpiler/x/fs/outer_join.fs(41,1): error FS0010: Incomplete structured construct at or before this point in implementation file
